corrijo getSlotsOfHumanPlayers por mal funcionamiento